# wasmBench

./: CMakeLists.txt  README.md  benchmark.sh  build.sh  configure.sh  swap.sh
golang/src/wasm/: fasta.go  nop.go
native/: CMakeLists.txt
rust/: fasta.rs
rust/benchmark/: Cargo.toml
rust/benchmark/src/: binary-trees.rs  fannkuch-redux.rs  mandelbrot.rs  mandelbrot.rs.1  nbody.rs
