[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
overflow-checks = false
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "fasta-r"           # The name of the target.
path = "src/fasta.rs"    # The source file of the target.
# bench = true

[[bin]]
name = "nbody-r"           # The name of the target.
path = "src/nbody.rs"    # The source file of the target.
# bench = true

[[bin]]
name = "binary-trees-r"           # The name of the target.
path = "src/binary-trees.rs"    # The source file of the target.
# bench = true

[[bin]]
name = "mandelbrot-r"           # The name of the target.
path = "src/mandelbrot.rs"    # The source file of the target.
# bench = true

[[bin]]
name = "nop-r"           # The name of the target.
path = "src/nop.rs"    # The source file of the target.
# bench = true

[[bin]]
name = "fannkuch-redux-r"           # The name of the target.
path = "src/fannkuch-redux.rs"    # The source file of the target.
# bench = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0.1"

#mandlebrot
#generic-array = "0.14.6"
#numeric-array = "0.5.2"
#md5 = "0.7.0"


anyhow = "1"
bitvec = "1"
elliptic-curve = "0"
generic-array = "0"
hashbrown = "0"
hashlink = "0"
hex = "0"
ibig = "0"
k256 = "0"
lasso = "0"
lazy_static = "1"
md5 = "0"
num-bigint = "0"
num-traits = "0"
num_cpus = "1"
numeric-array = "0"
rand = "0"
rayon = "1"
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1", features = ["float_roundtrip", "preserve_order"]}
static-rc = "0"

async-channel = {version = "1", optional = true}
async-executor = {version = "1", optional = true}
async-std = {version = "1", optional = true}
axum = {version = "0.5", optional = true, features = ["http1", "http2"]}
axum-server = {version = "0.4", optional = true, features = ["tls-rustls"]}
flume = {version = "0", optional = true}
futures-lite = {version = "1", optional = true}
reqwest = {version = "0.11", optional = true, default-features = false, features = ["json", "rustls-tls"]}
tokio = {version = "~1.20", optional = true}
warp = {version = "0.3", optional = true, features = ["tls"]}

[features]
default = [
  "async-std",
  "tokio/full",
  "flume",
  "async-channel",
  "async-executor",
  "futures-lite",
  "axum",
  "axum-server",
  "reqwest",
  "warp",
]
wasm = [
  "tokio/rt",
  "tokio/sync",
  "tokio/macros",
]
